# actix-web-graphql-api

./: Cargo.toml  Procfile  README.md  docker-compose.yml
migrations/2021-05-06-010300_create_users/: down.sql  up.sql
migrations/2021-05-06-010300_users/: down.sql  up.sql
migrations/2022-05-15-160224_create_auth/: down.sql  up.sql
migrations/2022-05-15-201209_crate_projects/: down.sql  up.sql
src/: config.rs  database.rs  errors.rs  main.rs  schema.rs
src/controllers/: mod.rs  schema.rs  user.rs
src/database/: mod.rs  pool.rs
src/graphql/: handler.rs  mod.rs  model.rs
src/graphql_schema/: root.rs  user.rs
src/handlers/: admin.rs  graphql.rs  mod.rs
src/jwt/: handler.rs  mod.rs  model.rs
src/models/: auth.rs  mod.rs  project.rs  user.rs
src/repositories/: auth.rs  project.rs  user.rs
src/users/: handler.rs  mod.rs  model.rs
