[package]
name = "actix-web-graphql-api"
version = "0.1.0"
authors = ["Douglas Oliveira <douglas4030@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.125"
chrono = { version = "0.4", features = ["serde"] }
juniper = "0.15.10"
derive_more = "0.99.17"
thiserror = "1.0.31"
futures = "0.3.5"
jsonwebtoken = "8.1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.5.5"
sha2 = "0.10.2"
hex = "0.4.3"